# oxicode

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  MIGRATION.md  README.md  TODO.md  deny.toml
.cargo/: audit.toml
.config/: nextest.toml
.github/workflows/: ci.yml  ci.yml.disabled
benches/: api_surface_bench.rs  comparison_bench.rs  config_matrix_bench.rs  decoding_bench.rs  encoding_bench.rs  serde_bench.rs
compatibility/: Cargo.toml  README.md
compatibility/src/: lib.rs
derive/: README.md
derive/src/: attrs.rs  decode_impl.rs  encode_impl.rs  lib.rs
examples/: binary_format.rs  compression.rs  derive_attrs.rs  streaming.rs  validation.rs  versioning.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode_slice.rs  fuzz_roundtrip.rs  fuzz_streaming.rs  fuzz_versioned.rs
src/: config.rs  display.rs  error.rs  lib.rs
src/checksum/: mod.rs
src/compression/: mod.rs  ruzstd_impl.rs  zstd_impl.rs
src/de/: borrow_slice.rs  decoder.rs  impl_tuples.rs  impls.rs  mod.rs  read.rs
src/enc/: impls.rs  mod.rs  write.rs
src/features/: impl_alloc.rs  impl_atomic.rs  impl_std.rs
src/features/serde/: compat.rs  de.rs  mod.rs  ser.rs
src/flat/: decoder.rs  encoder.rs  mod.rs
src/simd/: detect.rs  mod.rs
src/streaming/: async_io.rs  decoder.rs  encoder.rs  mod.rs
src/validation/: mod.rs  validator.rs
src/varint/: decode_signed.rs  decode_unsigned.rs  encode_signed.rs  encode_unsigned.rs
src/versioning/: compatibility.rs  mod.rs  version.rs
tests/: alloc_types_advanced3_test.rs  alloc_types_advanced_test.rs  alloc_types_test.rs  arc_rc_advanced_test.rs  array_encoding_advanced_test.rs  array_fixed_size_advanced2_test.rs  array_slice_advanced2_test.rs  array_types_advanced2_test.rs  array_types_advanced3_test.rs  async_advanced10_test.rs  async_advanced11_test.rs  async_advanced12_test.rs  async_advanced13_test.rs  async_advanced14_test.rs  async_advanced15_test.rs  async_advanced16_test.rs  async_advanced17_test.rs  async_advanced18_test.rs  async_advanced19_test.rs  async_advanced20_test.rs  async_advanced21_test.rs  async_advanced22_test.rs  async_advanced23_test.rs  async_advanced24_test.rs  async_advanced25_test.rs  async_advanced26_test.rs  async_advanced27_test.rs  async_advanced28_test.rs  async_advanced29_test.rs  async_advanced2_test.rs  async_advanced30_test.rs  async_advanced31_test.rs  async_advanced32_test.rs  async_advanced33_test.rs  async_advanced34_test.rs  async_advanced35_test.rs  async_advanced36_test.rs  async_advanced37_test.rs  async_advanced38_test.rs  async_advanced39_test.rs  (+899 more)
tests/nested_structs_advanced13/: main.rs  part_a.rs  part_b.rs  types.rs
tests/nested_structs_advanced15/: main.rs  part_a.rs  types.rs
tests/nested_structs_advanced17/: main.rs  part_a.rs  types.rs
