[package]
name = "oxicode_compatibility"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Compatibility tests for oxicode"
keywords = ["binary", "compatibility", "testing"]
categories = ["encoding", "development-tools::testing"]

publish = false

[dependencies]
oxicode = { path = "..", version = "0.2.3" }
serde = { workspace = true, features = ["derive"] }


[dev-dependencies]
bincode = "=2.0.1" # Never upgrade to 3.0 (3.x has incompatible API)
